STS and IMDSv2 credentials support (#248)
* Add support for temporary credentials from web identity using the STS endpoint, as well as from instance profiles via the IMDSv2 metadata service

* added more tests to improve coverage and make Codecov happy